# nowplaying-lite

./: CMakeLists.txt  albumart.cpp  infopanel.cpp  nowplaying.cpp  nowplaying.h  plasma-applet-nowplaying-lite.desktop
